syntax = "proto3";

package api;

option go_package = "github.com/percona/percona-xtradb-cluster-operator/pkg/xtrabackup/api";

service XtrabackupService {
    rpc GetCurrentBackupConfig(GetCurrentBackupConfigRequest) returns (BackupConfig);
    rpc CreateBackup(CreateBackupRequest) returns (stream CreateBackupResponse);
    rpc DeleteBackup(DeleteBackupRequest) returns (DeleteBackupResponse);
}

message GetCurrentBackupConfigRequest {}

message CreateBackupRequest {
    string backup_name = 1;
    BackupConfig backup_config = 2;
}

message CreateBackupResponse {}

message DeleteBackupRequest {
    string backup_name = 1;
    BackupConfig backup_config = 2;
}

message DeleteBackupResponse {}

enum BackupStorageType {
    S3 = 0;
    AZURE = 1;
    GCS = 2;
}

message BackupConfig {
    string destination = 1;
    BackupStorageType type = 2;
    bool verify_tls = 3;
    ContainerOptions container_options = 4;
    optional S3Config s3 = 5;
    optional GCSConfig gcs = 6;
    optional AzureConfig azure = 7;
}

message S3Config {
    string bucket = 1;
    string region = 2;
    string endpoint_url = 3;
    string access_key = 4;
    string secret_key = 5;
    string storage_class = 6;
}

message GCSConfig {
    string bucket = 1;
    string endpoint_url = 2;
    string storage_class = 3;
    string access_key = 4;
    string secret_key = 5;
}

message AzureConfig {
    string container_name = 1;
    string endpoint_url = 2;
    string storage_class = 3;
    string storage_account = 4;
    string access_key = 5;
}

message EnvVar {
    string key = 1;
    string value = 2;
}

message BackupContainerArgs {
    repeated string xtrabackup = 1;
    repeated string xbcloud = 2;
    repeated string xbstream = 3;
}

message ContainerOptions {
    repeated EnvVar env = 1;
    BackupContainerArgs args = 2;
}